[tool.poetry]
name = "pytorch-vrae-kinect"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.3.4"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^0.24.1"
pandas = "^1.2.2"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
