[tool.poetry]
name = "pytorch-vrae-kinect"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "*"
japanize-matplotlib = "*"
scikit-learn = "*"
pandas = "*"
torch = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
